# MasterEars

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  snapcraft.yaml
.github/workflows/: cmake.yml
Source/: DataManager.cpp  DataManager.h  Defs.h  MainComponent.cpp  MainComponent.h  MyLNF.cpp  MyLNF.h  ResultsComponent.cpp  ResultsComponent.h  SetupComponent.cpp  SetupComponent.h  main.cpp
Source/Backend/: Configuration.cpp  Configuration.h  Filter.cpp  Filter.h  Logic.cpp  Logic.h
Source/Logic/: Configuration.h
Source/ResultsGUI/: ResultsComponent.cpp  ResultsComponent.h  ResultsList.cpp  ResultsList.h
Source/SessionGUI/: FreqButtons.cpp  FreqButtons.h  Player.cpp  Player.h  SessionComponent.cpp  SessionComponent.h  ThumbnailLoadingWindow.h  WaveformViewer.cpp  WaveformViewer.h
